Cosmos accounts (#2)
* balance
* new account
* refactored grpc client for node
